syntax = 'proto3';
package gateway_protocol;

option java_multiple_files = false;
option java_package = "io.zeebe.gateway.protocol";
option go_package = "pb";

message HealthRequest {
}

message Partition {
  int32 partitionId = 1;
  string topicName = 2;
  enum PartitionBrokerRole {
    LEADER = 0;
    FOLLOW = 1;
  }
  PartitionBrokerRole role = 3;
}

message BrokerInfo {
  string host = 1;
  int32 port = 2;
  repeated Partition partitions = 3;
}

message HealthResponse {
  repeated BrokerInfo brokers = 1;
}

message ActivateJobRequest {
  string topicName = 1;
  string worker = 2;
  string type = 3;
  int32 amount = 4;
}

message JobInfo {
  int64 key = 1;
}

message ActivateJobResponse {
  repeated JobInfo jobs = 1;
}

service Gateway {
  rpc Health (HealthRequest) returns (HealthResponse) {
  }

  rpc ActivateJobs (ActivateJobRequest) returns (ActivateJobResponse) {
  }
}
